[package]
name = "kanji_to_kana"
license = "MIT"
description = "Convert Kana into Kanji, Kanji into Kana"
repository = "https://gitlab.com/syobon-tech/kanji_to_kana"
version = "0.1.1"
authors = ["syobon-tech <syobon_tech@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
